[gd_scene load_steps=3 format=3 uid="uid://b78tcyxepi533"]

[ext_resource type="Script" path="res://assets/web/user_login_info.gd" id="1_ayrga"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oj1pv"]
content_margin_left = 8.0
content_margin_right = 8.0
bg_color = Color(0.0846899, 0.0846899, 0.0846899, 0.301961)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 0.701961)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="RootContainer" type="VBoxContainer"]
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -214.0
offset_top = 43.0
offset_right = -43.0
offset_bottom = -433.0
grow_horizontal = 0
grow_vertical = 2
script = ExtResource("1_ayrga")

[node name="LoginContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="login" type="LineEdit" parent="LoginContainer"]
layout_mode = 2
placeholder_text = "login"

[node name="password" type="LineEdit" parent="LoginContainer"]
layout_mode = 2
placeholder_text = "password"

[node name="password2" type="LineEdit" parent="LoginContainer"]
visible = false
layout_mode = 2
placeholder_text = "repeat password"

[node name="invite" type="LineEdit" parent="LoginContainer"]
visible = false
layout_mode = 2
placeholder_text = "invite code"

[node name="ButtonBox" type="HBoxContainer" parent="LoginContainer"]
layout_mode = 2

[node name="login_btn" type="Button" parent="LoginContainer/ButtonBox"]
layout_mode = 2
text = "login"

[node name="Control" type="Control" parent="LoginContainer/ButtonBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="register_btn" type="Button" parent="LoginContainer/ButtonBox"]
layout_mode = 2
text = "register"

[node name="UserInfoContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="UserLabel" type="Label" parent="UserInfoContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_oj1pv")
text = "username"

[node name="HBoxContainer" type="HBoxContainer" parent="UserInfoContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="UserInfoContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="logout_btn" type="Button" parent="UserInfoContainer/HBoxContainer"]
layout_mode = 2
text = "log out"

[node name="LoadingContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="LoadingContainer"]
layout_mode = 2
text = "...thinking..."

[node name="error_label" type="Label" parent="."]
visible = false
modulate = Color(1, 0.211765, 0.211765, 1)
layout_mode = 2
text = "error"

[connection signal="pressed" from="LoginContainer/ButtonBox/login_btn" to="." method="_on_login_btn_pressed"]
[connection signal="pressed" from="LoginContainer/ButtonBox/register_btn" to="." method="_on_register_btn_pressed"]
[connection signal="pressed" from="UserInfoContainer/HBoxContainer/logout_btn" to="." method="_on_logout_btn_pressed"]
